# relayeet

./: .gitignore  .gitmodules  .hlint.yaml  Cargo.toml  ChangeLog.md  README.md  TAGS  hie.yaml  package.yaml  stack-8.6.3.yaml  stack.yaml
app/: client.hs  issue-token.hs  mock-streamer.hs  register-endpoint.hs  server.hs
client-rs/: .gitignore  Cargo.toml
client-rs/src/: config.rs  lib.rs  main.rs  serdestream.rs
config/: client.example.yaml  client.test.yaml  example.yaml  server.example.yaml  server.test.yaml
relayeet-client/: Cargo.toml
relayeet-server/: .gitignore  Cargo.toml  config.yaml
relayeet-server/src/: lib.rs  main.rs  msg.rs  stream.rs  webhook.rs
src/: Relayeet.hs
src/Relayeet/: Activity.hs  BearerAuth.hs
subscribe_chan/: Cargo.toml
subscribe_chan/src/: lib.rs
