[package]
name = "relayeet-server"
version = "0.1.0"
authors = ["Hiromi ISHII <konn.jinro@gmail.com>"]

[dependencies]
derive_more       = "0.11.0"
base64            = "0.9.2"
hmac              = "0.6.3"
iron              = "0.6.0"
router            = "0.6.0"
serde             = "1.0"
serde_derive      = "1.0"
serde_json        = "1.0"
serde_yaml        = "0.8"
yaml-rust         = "0.4.0"
sha2              = "0.7.1"
subscribe_chan    = { path = "../subscribe_chan" }