[package]
name = "relayeet-server"
version = "0.1.0"
authors = ["Hiromi ISHII <konn.jinro@gmail.com>"]

[dependencies]
derive_more       = "0.11.0"
base64            = "0.9.2"
hmac              = "0.6.3"
gotham            = "0.2.1"
gotham_derive     = "0.2.1"
serde             = "1.0"
serde_derive      = "1.0"
serde_json        = "1.0"
serde_yaml        = "0.8"
yaml-rust         = "0.4.0"
mime              = "0.3.9"
hyper             = "0.12"
sha2              = "0.7.1"
oxide-auth        = "0.3.1"
subscribe_chan    = { path = "../subscribe_chan" }
